production/web/50.Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: web
  labels:
    app.kubernetes.io/component: web
    app.kubernetes.io/name: web
    prometheus.monitoring/service: nginx-exporter
  annotations:
    deployment.kubernetes.io/revision: '1'
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: web
      app.kubernetes.io/name: web
  template:
    metadata:
      labels:
        app.kubernetes.io/component: web
        app.kubernetes.io/name: web
    spec:
      volumes:
        - name: var-storage
          emptyDir: {} 
        - name: run-storage
          emptyDir: {}
        - name: web-storage
          persistentVolumeClaim:
             claimName: nas-web
        - name: web-metrics
          configMap:
            name: web-metrics
            defaultMode: 420
        - name: nginx-exporter-storage
          emptyDir: {}
      containers:
        - name: web
          image:  s2.ubuntu.home:5000/thirdparty/nginx:1.22.0
          imagePullPolicy: IfNotPresent 
          ports:
            - name: web
              containerPort: 80
              protocol: TCP
#            - name: metrics
#              containerPort: 8080
#              protocol: TCP
          resources:
            limits:
              cpu: 200m
              memory: 200Mi
            requests:
              cpu: 100m
              memory: 100Mi
          volumeMounts:
            - name: run-storage
              mountPath: /var/run 
            - name: var-storage
              mountPath: /var/cache/nginx 
            - name: web-storage
              mountPath: /usr/share/nginx/html
              subPath: web
            - mountPath: /etc/nginx/conf.d/metrics.conf
              name: web-metrics 
              subPath: metrics.conf
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        - name: nginx-exporter
          command:
            - nginx-prometheus-exporter
            - -nginx.scrape-uri=http://127.0.0.1:8080/metrics
          image: s2.ubuntu.home:5000/thirdparty/nginx-prometheus-exporter:0.10
          ports:
            - name: nginxexporter
              containerPort: 9113
              protocol: TCP
          resources:
            limits:
              cpu: 200m
              memory: 200Mi
            requests:
              cpu: 100m
              memory: 100Mi
          volumeMounts:
            - name: nginx-exporter-storage
              mountPath: /etc/nginx-exporter
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent 
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      nodeSelector:
        kubernetes.io/os: linux
      serviceAccountName: web
      serviceAccount: web
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
