production/web/60.Service.yml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: web
  labels:
    app.kubernetes.io/component: web
    app.kubernetes.io/name: web
    prometheus.monitoring/service: nginx-exporter
spec:
  externalTrafficPolicy: Cluster 
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: web 
    - name: metrics
      protocol: TCP
      port: 8080
      targetPort: metrics 
  selector:
    app.kubernetes.io/component: web
    app.kubernetes.io/name: web
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer: {}
