production/web/70.Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: web
  annotations:
annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "9113"
    kubernetes.io/ingress.class: public
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true" 
spec:
  defaultBackend:
    service:
      name: recipies
      port:
        number: 443
  rules:
  - host: "web.k8s.home"
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: web
              port:
                number: 80
